--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Theme.Labs" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/white</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="actionBarStyle">@style/Widget.Labs.Toolbar</item>
+    </style>
 
-    <style name="Theme.Labs" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Widget.Labs.Toolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
+        <item name="android:background">@android:color/white</item>
+        <item name="titleTextColor">@android:color/black</item>
+    </style>
 </resources>
